fix: /admin page on mobile devices

--- a/pages/admin.module.css
+++ b/pages/admin.module.css
@@ -1,5 +1,7 @@
 .main {
   padding: 10px;
+  width: 100dvw;
+  overflow-x: hidden;
 }
 
 .container {
@@ -10,7 +12,7 @@
 }
 
 .main h1 {
-  font-size: 2.2rem;
+  font-size: clamp(1rem, 1.7rem, 2.2rem);
   margin-bottom: 30px;
   text-align: center;
   color: var(--color-muted);
